<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">互助提醒</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="add">添加</string>
    <string name="remind">我的提醒</string>
    <string name="peopel">联系人</string>
    <string name="setting">设置</string>
    <string name="peopel_empty">您还没有联系人，快来添加一个试试吧！</string>
    
    <string name="name">名称</string>
    <string name="nick">昵称</string>
    <string name="num">号码</string>
    <string name="img">头像</string>
    <string name="explor">浏览</string>
    <string name="validate">等待验证</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="friend">已添加</string>
    <string name="search">搜索</string>
    
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="select_peopel">选择联系人</string>
    <string name="select_date">选择日期</string>
    <string name="select_time">选择时间</string>
    <string name="set_content">请填写提醒内容</string>
    <string name="set_title">请填写标题内容</string>
    <string name="date">日期  </string>
    <string name="time">时间  </string>
    <string name="content">提醒  </string>
    <string name="title">标题  </string>
    <string name="select">选择</string>
    <string name="repeat">重复  </string>
    <string name="repeat_no">无  </string>
    <string name="repeat_day">每天 </string>
    <string name="repeat_week">每周 </string>
    <string name="repeat_month">每月</string>
    <string name="repeat_year">每年</string>
    <string name="select_title">主题</string>
    <string name="select_title_txt">请填写主题</string>
    <string name="select_type">形式</string>
    <string name="select_type_txt">语音</string>
    <string name="select_prev">是否可预览  </string>
    <string name="select_more">更多设置</string>
    
    <string name="remind_wait">等待对方接受</string>
    <string name="remind_refuse">对方已拒绝</string>
    <string name="remind_accept">对方已接受</string>
    
    <string name="send_msg">发消息</string>
    <string name="exit_msg">退出登陆</string>
    <string name="info">信息</string>
    <string name="add_remind">添加提醒</string>
    <string name="send">发送</string>
    
    <string name="alert_start">已开始</string>
    <string name="alert_ready">马上开始</string>
    <string name="alert_later">延迟10分钟</string>
    <string name="alert_other">其他</string>
    
    <string name="alert_delete">删除</string>
    
    <string name="alert_close">关闭</string>
    
    <!-- LOGIN -->
    <string name="user_account">账号</string>
    <string name="user_nick">昵称</string>
    <string name="user_psw">密码</string>
    <string name="user_login">登录</string>
    <string name="user_reg">注册</string>
    <string name="user_psw_rem">记住用户名</string>
    <string name="user_login_type">本地登录</string>
    <string name="user_login_title">用户登录</string>
    <string name="user_reg_title">用户注册</string>
    <string name="account_null">您的用户名不能为空！</string>
    <string name="account_error">用户名格式错误！</string>
    <string name="login_fail">登录失败，用户名或者密码错误！</string>
    <string name="pwd_null">您的密码不能为空！</string>
    <string name="nick_null">您的昵称不能为空！</string>
    <string name="pwd_len_error">密码长度至少要6位！</string>
    <string name="login_success">登录成功！</string>
    <string name="fail_info">失败,请确认后重试。</string>
    <string name="net_null">请打开网络</string>
    <!-- 添加用户 -->
    <string name="add_people">添加用户</string>
</resources>
