<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/delete"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="7dp"
        android:focusable="false"
        android:text="@string/alert_delete"
        android:textColor="@color/black">
    </Button>

    <Button
        android:id="@+id/refuse"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="7dp"
        android:focusable="false"
        android:text="@string/refuse"
        android:textColor="@color/black"
        android:visibility="gone" >
    </Button>

    <Button
        android:id="@+id/cancel"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="7dp"
        android:focusable="false"
        android:text="@string/cancel"
        android:textColor="@color/black">
    </Button>

</LinearLayout>