<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/title_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/title_icon"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/title_ok"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/black" >
        </Button>

        <Button
            android:id="@+id/title_cancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/title_ok"
            android:padding="0dp"
            android:text="@string/cancel" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/peopel"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/select_peopel_text"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/select_peopel_btn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:text="@string/select_peopel"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/select_date_text"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:drawable/btn_default"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/select_date_btn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:text="@string/select_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/select_time_text"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:drawable/btn_default"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/select_time_btn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:text="@string/select_time"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/repeat"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/repeat_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/repeat_no_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/repeat_no" />

                    <RadioButton
                        android:id="@+id/repeat_day_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeat_day" />

                    <RadioButton
                        android:id="@+id/repeat_week_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeat_week" />

                    <RadioButton
                        android:id="@+id/repeat_month_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeat_month" />

                    <RadioButton
                        android:id="@+id/repeat_year_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeat_year" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/set_title_edit"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:hint="@string/set_title"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:text="@string/select_time"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/content"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/set_content_edit"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:hint="@string/set_content"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:text="@string/select_time"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>