<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="15dp" >

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/title_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/title_icon"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/title_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/search"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_edit"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/title_ok"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:visibility="gone" >
        </Button>

        <Button
            android:id="@+id/title_cancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/title_ok"
            android:padding="0dp"
            android:text="@string/cancel"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/peopel_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/peopel_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/peopel_num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/peopel_num_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/peopel_nick_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/nick"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/peopel_nick_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left"
            android:maxEms="10"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/peopel_img_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/img"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.remind.view.RoleDetailImageView
            android:id="@+id/peopel_img_preview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            imagecontrol:border_inside_color="#f0A9E3F5"
            imagecontrol:border_outside_color="#60ABE3F4"
            imagecontrol:border_thickness="4dp" />

        <Button
            android:id="@+id/peopel_img_search"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginLeft="55dp"
            android:background="@drawable/circle_btn"
            android:text="@string/explor"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

    <Button
	        android:id="@+id/send_msg_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_margin="15dp"
	        android:background="@drawable/btn_warn_deail"
	        android:text="@string/send_msg"
	        android:textColor="@color/black" />
    <Button
	        android:id="@+id/exit_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_margin="15dp"
	        android:background="@drawable/btn_warn_deail"
	        android:text="@string/exit_msg"
	        android:textColor="@color/black"
	        android:visibility="gone"  />
</LinearLayout>