<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/title_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/title_icon"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/title_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/black" 
            android:padding="0dp"
            android:contentDescription="@string/search"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_search"/>

        <ImageButton
            android:id="@+id/title_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/title_search"
            android:contentDescription="@string/add"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/find_more_friend_addfriend_icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/peopel_empty_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/peopel_empty"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/peopel_list"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:divider="@color/gray"
        android:dividerHeight="1dp"
        android:gravity="center"
        android:visibility="gone" >
    </ListView>

</LinearLayout>